# PyPlaylistSucker

./: README.md  pyproject.toml  requirements.txt
src/app/: main.py
src/app/core/: errors.py  log.py  settings.py
src/app/models/: file.py  folder.py
src/app/services/: file_service.py
